--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.34",
+    "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
@@ -86,7 +87,7 @@
     "express-async-errors": "^3.1.1",
     "http-status": "^1.5.2",
     "joi": "^17.6.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.1",
     "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13"
   }
