--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ POSTGRES_PASSWORD=top_secret
 POSTGRES_HOST=drivent-postgres-test
 POSTGRES_PORT=5433
 POSTGRES_DATABASE=drivent_test
+REDIS_URL=redis://localhost:6379
 
 JWT_SECRET=top_secret
 
