--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ POSTGRES_DATABASE=drivent_test
 REDIS_URL=redis://localhost:6379
 
 JWT_SECRET=top_secret
+
+DATABASE_URL=postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public
