--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ POSTGRES_HOST=drivent-postgres-test
 POSTGRES_PORT=5433
 POSTGRES_DATABASE=drivent_test
 REDIS_URL=redis://localhost:6379
+EMAIL_API_KEY=
+EMAIL=
 
 JWT_SECRET=top_secret
 
