fixing .env.example

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ REDIS_URL=redis://localhost:6379
 JWT_SECRET=top_secret
 
 DATABASE_URL=postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public
+
+EMAIL_API_KEY = SENDGRID_API_KEY
+EMAIL = your_email@email.com
