feat: signin with github

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ DATABASE_URL=postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_H
 
 EMAIL_API_KEY = SENDGRID_API_KEY
 EMAIL = your_email@email.com
+
+CLIENT_ID = abc123456789
+CLIENT_SECRET = abc123456789
